# dotfiles

./: .bashrc  .gitconfig  .gitignore  .vimrc  .zshrc  README.md  config.yml  extras.sh  helper.py  install.sh  known.txt  managed.files  outputs.sh  pyproject.toml  quicksync.sh
.config/concord/: DOCUMENTATION.link  config.toml  keymap.toml
.config/iterm2/: com.googlecode.iterm2.plist
.config/nvim/: init.lua
.config/nvim/lua/: options.lua
.oh-my-zsh/custom/plugins/poetry/: _poetry
.oh-my-zsh/themes/: terse.zsh-theme
dotmgr/: __init__.py  dot.py  fdtools.py  filelib.py  git.py  helper.py  install.sh  oh_my_zsh.py  outputs.py  pkg.py  ruff.toml  utils.py  zsh.py
dotmgr/funky/: oh_my_zsh.py  zsh.py
dotmgr/mods/: Authoring Mods.md  __init__.py  base.py  omz.py  zsh.py
files/: .bashrc
legacy/: README.md  known.txt  outputs.sh  quicksync.sh
legacy/mods/: nvchad.sh  zsh.sh
mods/: neovim.sh  nvchad.sh  omz.sh  zsh.sh
testing-tools/: Dockerfile.fedora  Dockerfile.opensuse  Dockerfile.rocky  Dockerfile.ubuntu  test.sh
