[project]
name = "dotmgr"
version = "0.1.0"
description = "Custom, dependency-less dotfile manager"
authors = [
    { name = "Mase3206", email = "35052448+Mase3206@users.noreply.github.com" },
]
requires-python = ">3.9,<3.14"
readme = "README.md"
dependencies = []

[project.scripts]
# manage = "bitterroot.manage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff (>=0.14.3,<0.15.0)",
]


# Ruff settings

# [tool.ruff]
# include = ["bitterroot/**/*.py"]

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "W291", "F401", "I"
]
[tool.ruff.lint.isort]
combine-as-imports = true